--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -23,60 +23,45 @@
       <ul class="nav navbar-nav">
 
         {% if site.kind == "lesson" %}
-	{% comment %} Show setup instructions. {% endcomment %}
-        <li><a href="{{ relative_root_path }}{% link setup.md %}">Setup</a></li>
+          {% comment %} Show setup instructions. {% endcomment %}        
+          
+          <li><span style="line-height: 50px; color: #CCCCCC;">Setup</span></li>
 
-        {% comment %} Show lesson episodes for lessons. {% endcomment %}
-        {% if lesson_episodes.size > 0 %}
-        <li class="dropdown">
-          <a href="{{ relative_root_path }}/" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Episodes <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            {% for lesson_episode in lesson_episodes %}
-            {% if site.episode_order %}
-              {% assign episode = site.episodes | where: "slug", lesson_episode | first %}
-            {% else %}
-              {% assign episode = lesson_episode %}
-            {% endif %}
-            <li><a href="{{ relative_root_path }}{{ episode.url }}">{{ episode.title }}</a></li>
-            {% endfor %}
-	    <li role="separator" class="divider"></li>
-            <li><a href="{{ relative_root_path }}{% link aio.md %}">All in one page (Beta)</a></li>
-          </ul>
-        </li>
+          {% comment %} Show lesson episodes for lessons. {% endcomment %}
+          {% if lesson_episodes.size > 0 %}
+            <li class="dropdown">
+              <a href="{{ relative_root_path }}/" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Episodes <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                {% for lesson_episode in lesson_episodes %}
+                  {% if site.episode_order %}
+                    {% assign episode = site.episodes | where: "slug", lesson_episode | first %}
+                  {% else %}
+                    {% assign episode = lesson_episode %}
+                  {% endif %}
+                
+                  <li><a href="{{ relative_root_path }}{{ episode.url }}">{{ episode.title }}</a></li>
+                {% endfor %}
+                <li role="separator" class="divider"></li>
+                <li><a href="{{ relative_root_path }}{% link aio.md %}">All in one page (Beta)</a></li>
+              </ul>
+            </li>
+          {% endif %}
         {% endif %}
-	{% endif %}
 
-	{% comment %} Show extras for lessons or if this is the main workshop-template repo (where they contain documentation). {% endcomment %}
-	{% if site.kind == "lesson" %}
-        <li class="dropdown">
-          <a href="{{ relative_root_path }}/" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Extras <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="{{ relative_root_path }}{% link reference.md %}">Reference</a></li>
-            {% for lesson_extra in lesson_extras %}
-            {% if site.extras_order %}
-              {% assign extra = site.extras | where: "slug", lesson_extra | first %}
-            {% else %}
-              {% assign extra = lesson_extra %}
-            {% endif %}
-            <li><a href="{{ relative_root_path }}{{ extra.url }}">{{ extra.title }}</a></li>
-            {% endfor %}
-          </ul>
-        </li>
-	{% endif %}
+        {% comment %} Show extras for lessons or if this is the main workshop-template repo (where they contain documentation). {% endcomment %}
+  
+        {% if site.kind == "lesson" %}
+          <li><a href="{{ relative_root_path }}{% link reference.md %}">Reference</a></li>
+        {% endif %}
 
-	{% if page.source %}
-	{% if page.source == "Rmd" %}
-	<li><a href="{{repo_url}}/edit/{{ default_branch }}/{{page.path|replace: "_episodes", "_episodes_rmd" | replace: ".md", ".Rmd"}}" data-checker-ignore>Improve this page <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></li>
-	{% endif %}
-	{% else %}
-	<li><a href="{{repo_url}}/edit/{{ default_branch}}/{{page.path}}" data-checker-ignore>Improve this page <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></li>
-	{% endif %}
+        {% if page.source %}
+          {% if page.source == "Rmd" %}
+            <li><a href="{{repo_url}}/edit/{{ default_branch }}/{{page.path|replace: "_episodes", "_episodes_rmd" | replace: ".md", ".Rmd"}}" data-checker-ignore>Improve this page <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></li>
+          {% endif %}
+        {% else %}
+          <li><a href="{{repo_url}}/edit/{{ default_branch}}/{{page.path}}" data-checker-ignore>Improve this page <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></li>
+        {% endif %}
       </ul>
-      <form class="navbar-form navbar-right" role="search" id="search" onsubmit="google_search(); return false;">
-        <div class="form-group">
-          <input type="text" id="google-search" placeholder="Search..." aria-label="Google site search">
-        </div>
-      </form>
     </div>
   </div>
 </nav>
